# DPHPC23-SmokyRhino

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  gen_plots_eric.ipynb  gen_plots_eric_borders.ipynb  gen_plots_jiela_copy copy.ipynb  gen_plots_jiela_copy.ipynb  launch.sh  profiling_launch.sh  roofline_plots.ipynb  sparsity_prediction.csv  sparsity_predictor.py  tests.sh  times6.csv
MatrixLib/src/: CMakeLists.txt  CSRMatrix.cpp  DenseMatrix.cpp
MatrixLib/test/: CMakeLists.txt  test_IO_CSR.cpp  test_IO_Dense.cpp  test_SDDMM.cpp
SDDMMlib/: CMakeLists.txt  README.md
SDDMMlib/include/: SDDMMlib.hpp  naive_SDDMM.hpp
SDDMMlib/include/MatrixLib/: COOMatrix.hpp  CSRMatrix.hpp  DenseMatrix.hpp  SparseMatrix.hpp
SDDMMlib/include/SDDMM/: SDDMMlib.hpp  naive_CPU_SDDMM.hpp  naive_SDDMM.hpp  naive_sequential_full_SDDMM.hpp  naive_sequential_sampled_SDDMM.hpp
SDDMMlib/include/SDDMM/SM_L2/: SM_L2.cuh  SM_L2_GPU.hpp  SM_L2_util.h
SDDMMlib/include/SDDMM/better_naive_CSR_GPU/: better_naive_CSR_SDDMM_GPU.cuh  better_naive_CSR_SDDMM_GPU_kernel.cuh
SDDMMlib/include/SDDMM/cache_coo_gpu/: cache_coo_SDDMM.cuh  cache_coo_SDDMM_GPU.hpp
SDDMMlib/include/SDDMM/coo_SM_SM_SDDMM_gpu/: coo_SM_SM_SDDMM.cuh  coo_SM_SM_SDDMM_GPU.hpp
SDDMMlib/include/SDDMM/coo_opt_loop_unrolled_gpu/: coo_opt_loop_unrolled_SDDMM.cuh  coo_opt_loop_unrolled_SDDMM_GPU.hpp
SDDMMlib/include/SDDMM/coo_opt_vectorization_gpu/: coo_opt_vectorization_SDDMM.cuh  coo_opt_vectorization_SDDMM_GPU.hpp
SDDMMlib/include/SDDMM/coo_tiling_cached_gpu/: coo_tiling_cached_gpu_SDDMM.cuh  coo_tiling_cached_gpu_SDDMM_GPU.hpp
SDDMMlib/include/SDDMM/coo_tiling_naive_gpu/: coo_tiling_naive_gpu_SDDMM.cuh  coo_tiling_naive_gpu_SDDMM_GPU.hpp
SDDMMlib/include/SDDMM/cusparse_baseline/: cusparse_baseline.hpp
SDDMMlib/include/SDDMM/initial_SDDMM_GPU_jiela/: initial_SDDMM_GPU_jiela.hpp
SDDMMlib/include/SDDMM/initial_implementation_gpu_jiela/: initial_SDDMM_GPU_jiela.hpp  initial_SDDMM_GPU_kernel_jiela.cuh  semi_naive_CSR_SDDMM_GPU.cuh  semi_naive_CSR_SDDMM_GPU_kernel.cuh
SDDMMlib/include/SDDMM/initial_implementation_gpu_niklas/: initial_SDDMM_GPU_niklas.hpp  initial_SDDMM_solver.cuh
SDDMMlib/include/SDDMM/memory_test/: test.cuh  test_hub.hpp  test_shared.cuh
SDDMMlib/include/SDDMM/merged/: merged.cuh  merged.hpp
SDDMMlib/include/SDDMM/naive_coo_gpu/: naive_coo_SDDMM_GPU.hpp  naive_coo_SDMM.cuh
SDDMMlib/include/SDDMM/naive_csr_via_coo_gpu/: naive_csr_via_coo_SDDMM.cuh  naive_csr_via_coo_SDDMM_GPU.hpp
SDDMMlib/include/SDDMM/naive_dense_dense_gpu/: my_naive_sampling.cuh  naive_SDDMM_GPU.cuh  naive_SDDMM_GPU.hpp  naive_dense_dense.cuh
SDDMMlib/include/SDDMM/naive_sequential_full_SDDMM_HOST/: naive_sequential_full_SDDMM_HOST.hpp
SDDMMlib/include/SDDMM/naive_sequential_sampled_SDDMM_HOST/: naive_sequential_sampled_SDDMM_HOST.hpp
SDDMMlib/include/SDDMM/semi_naive_CSR_GPU/: semi_naive_CSR_SDDMM_GPU.cuh  semi_naive_CSR_SDDMM_GPU_kernel.cuh
SDDMMlib/include/SDDMM/sml2_our/: sml2.cuh  sml2_kernel.cuh
SDDMMlib/include/SDDMM/tiled_tiles/: tiled_tiles.cuh  tiled_tiles.hpp
SDDMMlib/include/TimingLib/: ExecutionTimer.hpp
SDDMMlib/src/: CMakeLists.txt  naive_SDDMM.cpp
SDDMMlib/src/MatrixLib/: CMakeLists.txt  COOMatrix.cpp  CSRMatrix.cpp  DenseMatrix.cpp
SDDMMlib/src/SDDMM/: CMakeLists.txt  naive_CPU_SDDMM.cpp  naive_SDDMM.cpp  naive_seqential_full_SDDMM copy.cpp  naive_seqential_sampled_SDDMM.cpp  naive_sequential_full_SDDMM.cpp  naive_sequential_sampled_SDDMM.cpp  optimized_sml2_blueprint.txt
SDDMMlib/src/SDDMM/SM_L2/: SM_L2.cu  SM_L2_GPU.cpp
SDDMMlib/src/SDDMM/better_naive_CSR_GPU/: better_naive_CSR_SDDMM_GPU.cu  better_naive_CSR_SDDMM_GPU_kernel copy 2.cu  (+1 more)
SDDMMlib/src/TimingLib/: CMakeLists.txt  ExecutionTimer.cpp
SDDMMlib/tests/: CMakeLists.txt
SDDMMlib/tests/MatrixLib/: CMakeLists.txt  test_COO.cpp  test_IO_CSR.cpp  test_IO_Dense.cpp  test_SDDMM.cpp
SDDMMlib/tests/SDDMM/: CMakeLists.txt  test_SM_L2.cpp  test_cache_coo_SDDMM_GPU.cpp  test_coo_SM_SM_SDDMM_GPU.cpp  test_coo_opt_vectorization_SDDMM_GPU.cpp  test_coo_tiling_naive_gpu.cpp  test_cusparse_baseline.cpp  test_merged.cpp  test_naive_CPU_SDDMM.cpp  test_naive_coo_SDDMM_GPU.cpp  test_naive_csr_via_coo_SDDMM_GPU.cpp  test_sml2_our.cpp  test_tiled_tiles.cpp
benchmark_pipeline/: .dst_file  CMakeLists.txt  README.md
benchmark_pipeline/Pipeline/: README.md  benchmark_run.sh  generateMatrices.sh  generateMatrix.sh  generate_run_configs.sh  generate_run_configs_for_downloaded_matrices.sh  import_from_matrix_market.ipynb  run_on_cluster.sh
benchmark_pipeline/include/: config_helper.hpp  dataset_paths.hpp  implemented_classes.hpp  runner.hpp
benchmark_pipeline/matrix_generation/: generateMatrices  generateMatrices.cpp  generateMatrices.sh
benchmark_pipeline/src/: CMakeLists.txt  benchmark_pipeline.cpp  config_helper.cpp  runner.cpp
benchmark_pipeline/src/matrix_generation/: generateMatrices.cpp
benchmark_pipeline/tests/: config.example.txt  config.naive_CPU_SDDMM.txt  config.txt  coo_matrix_test  csrmatrix_test.txt  densematrix_test.txt  jiela.config.txt  results.csv  results_1698250153912076.csv  results_1698829885098521757.csv  results_1699005817900975.csv  results_1699012123934008.csv  results_1699122727725580529.csv  results_1699178199959367033.csv  results_1699429474339448963.csv  results_1700476946086122239.csv  results_1700733620830915534.csv  results_1700747666611564218.csv  results_1700830571070405008.csv  results_1701939108465956519.csv  results_1702057058289108393.csv  results_1702057297398041710.csv  results_1702060840136916244.csv  results_1702303588257453121.csv  results_1702305128227075505.csv  results_1702308942268102728.csv  results_1702392672386803605.csv  results_1702392688270865210.csv  results_1702404224866764402.csv  results_1702404380917075461.csv  results_1704288026318138054.csv  results_1704288497568910998.csv  results_1704292071921990442.csv  results_1704356392590267983.csv  results_1704361457655008602.csv  results_1704793231324017885.csv  results_1704793594030509194.csv  sampled_densematrix_test.txt
(+87 files in other folders)
